# Alura_CPP_Foundations

./: LICENSE  README.md
GuessTheNumber/: CMakeLists.txt  Colors.cpp  GuessTheNumber.cpp  GuessTheNumber.hpp  Makefile  NbrController.cpp  Printers.cpp  Validators.cpp
Hangman/: CMakeLists.txt  DatabaseInit.cpp  Hangman.cpp  Hangman.hpp  Makefile  Managers.cpp  Printers.cpp  Validators.cpp  secret_words.txt
